@@ -2,7 +2,7 @@ AC_PREREQ( 2.59 )
 
 AC_INIT(
  [libcpath],
- [20140624],
+ [20140626],
  [joachim.metz@gmail.com])
 
 AC_CONFIG_SRCDIR(
